# hatanaka

./: .gitignore  Cargo.toml  README.md  TODO.md
data/CRINEX1/: zegv0010.21d  zegv0010.21o
data/CRINEX3/: CHIO00GBR-s.rnx  CHIO00GBR.crx
data/V1/: eijs0010.21-testo  npaz3550.21-testo  pdel0010.21o  zegv0010.21o
data/V3/: BME100HUN_R_20213550000_01D_30S_MO-test.rnx  CHIO00GBR.crx  CHIO00GBR.rnx  DOUR00BEL_R_20200130000_01D_30S_MO-test.rnx  KUNZ00CZE.rnx
src/: cli.yml  main.rs
