[package]
name = "hatanaka"
version = "0.0.1"
license-file = "LICENSE"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX Compression & Decompression tool"
homepage = "https://github.com/gwbres/hatanaka"
keywords = ["rinex", "hatanaka", "compression", "decompression", "crinex"] 
categories = ["science", "command-line-interface", "command-line-utilities"]
edition = "2018"
readme = "README.md"

[dependencies]
rinex = { path = "/hdd/git/rinex" } 
clap = { version = "~2.27.0", features = ["yaml"] }
thiserror = "1"
