[package]
name = "hatanaka"
version = "0.1.0"
license-file = "LICENSE"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX Compression & Decompression tool"
homepage = "https://github.com/gwbres/hatanaka"
keywords = ["rinex", "hatanaka", "compression", "decompression", "crinex"] 
categories = ["science", "command-line-interface", "command-line-utilities"]
edition = "2018"
readme = "README.md"

[dependencies]
rinex = "0.3.0" 
clap = { version = "~2.27.0", features = ["yaml"] }
thiserror = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
